--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "express": "^4.16.3",
     "mongoose": "^5.0.13",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "dotenv": "^6.1.0",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "faker": "^4.1.0",
